--- a/src/component/header/header.scss
+++ b/src/component/header/header.scss
@@ -16,9 +16,10 @@ body{
 // margin: 1%;
 }
 header{
-    margin: 2%;
+    // padding-bottom: 4.5%;
     width: 99%;
-   margin: auto;
+    margin: auto;
+    margin: 2%;
     position: relative;
 }
 h1{
@@ -32,10 +33,10 @@ h1{
 }
 .open{
     position: absolute;
-    top: 26px;
     color: #000;
     background-color: black;
-    left: 50px;
+ 
+    // padding: 3%;
     width: 50px;
     height: 50px;
     display: block;
