--- a/src/component/header/header.scss
+++ b/src/component/header/header.scss
@@ -7,15 +7,17 @@ html{
 }
 
 body{
-    background: #fff;
+    background: rgba(19, 18, 18, 0.945);
   width: 100%;
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
-  color: rgb(19, 18, 18);
+  color: white;
 //   padding: 60px;
 // margin: 1%;
 }
 header{
+    background: rgba(19, 18, 18, 0.945);
+    position: fixed;
     // padding-bottom: 4.5%;
     width: 99%;
     margin: auto;
@@ -34,7 +36,8 @@ h1{
 .open{
     position: absolute;
     color: #000;
-    background-color: black;
+    // background-color: black;
+    
  
     // padding: 3%;
     width: 50px;
@@ -161,13 +164,16 @@ h1{
 }
 
 .header-containar{
-    position: absolute;
+    position: fixed;
+    margin-bottom: 20%;
+    // position: absolute;
+    clear: both;
     padding: 1%;
     padding-bottom: 1%;
     margin: .5%;
     top: 0;
     left: 0;
-    background-color: black;
+    background-color: rgba(2, 2, 2, 0.945);
     width: 100%;
 }
 .header-containar img {
