--- a/src/component/forms/signform.scss
+++ b/src/component/forms/signform.scss
@@ -1,7 +1,11 @@
+// html{
+// 	background-color: rgba(0, 0, 0, 0.692);
+// }
+
 body{
 	margin:0;
 	color:#6a6f8c;
-	background:#c8c8c8;
+	background-color:rgba(0, 0, 0, 0.596);
 	font:600 16px/18px 'Open Sans',sans-serif;
 }
 *,:after,:before{box-sizing:border-box}
@@ -13,9 +17,10 @@ a{color:inherit;text-decoration:none}
 	width:100%;
 	margin:auto;
 	max-width:525px;
-	min-height:670px;
+	margin: 30%;
+	min-height: 590px;
 	position:relative;
-	background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
+	background:url(https://i.ibb.co/zXXVW3m/man.jpg) no-repeat center;
 	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
 }
 .login-html{
@@ -23,7 +28,7 @@ a{color:inherit;text-decoration:none}
 	height:100%;
 	position:absolute;
 	padding:90px 70px 50px 70px;
-	background:rgba(40,57,101,.9);
+	background:#0f545dbd;
 }
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
@@ -79,7 +84,7 @@ a{color:inherit;text-decoration:none}
 .login-form .group .button{
 	border:none;
 	padding:15px 20px;
-	border-radius:25px;
+	border-radius:2px;
 	background:rgba(255,255,255,.1);
 }
 .login-form .group input[data-type="password"]{
@@ -91,7 +96,7 @@ a{color:inherit;text-decoration:none}
 	font-size:12px;
 }
 .login-form .group .button{
-	background:#1161ee;
+	background:#5fa996;
 }
 .login-form .group label .icon{
 	width:15px;
@@ -125,7 +130,7 @@ a{color:inherit;text-decoration:none}
 	color:#fff;
 }
 .login-form .group .check:checked + label .icon{
-	background:#1161ee;
+	background:#5fa996;
 }
 .login-form .group .check:checked + label .icon:before{
 	transform:scale(1) rotate(45deg);
@@ -143,8 +148,32 @@ a{color:inherit;text-decoration:none}
 .hr{
 	height:2px;
 	margin:60px 0 50px 0;
-	background:rgba(255,255,255,.2);
+	background:rgba(255, 255, 255, 0.959);
 }
 .foot-lnk{
 	text-align:center;
+}
+.login-html {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    padding: 90px 70px 50px 70px;
+	background: #0f545dbd;
+}
+.group-google {
+	width: 392px;
+	margin-left: -2px;
+	
+}
+
+.button-google{
+	border-radius: 25px;
+	background: rgb(203, 63, 34);
+}
+.button-google div{
+
+	align-items: center;
+    display: flex;
+    height: 100%;
+	margin: 0 0 0 14px;
 }
