--- a/src/component/forms/signform.scss
+++ b/src/component/forms/signform.scss
@@ -4,7 +4,7 @@
 
 body{
 	margin:0;
-	color:#6a6f8c;
+	color: #18181ba3;
 	background-color:rgba(0, 0, 0, 0.596);
 	font:600 16px/18px 'Open Sans',sans-serif;
 }
@@ -28,7 +28,7 @@ a{color:inherit;text-decoration:none}
 	height:100%;
 	position:absolute;
 	padding:90px 70px 50px 70px;
-	background:#0f545dbd;
+	background: #0f545dd1;
 }
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
@@ -87,10 +87,6 @@ a{color:inherit;text-decoration:none}
 	border-radius:2px;
 	background:rgba(255,255,255,.1);
 }
-.login-form .group input[data-type="password"]{
-	text-security:circle;
-	-webkit-text-security:circle;
-}
 .login-form .group .label{
 	color:#aaa;
 	font-size:12px;
@@ -131,6 +127,7 @@ a{color:inherit;text-decoration:none}
 }
 .login-form .group .check:checked + label .icon{
 	background:#5fa996;
+	font-size: 15px;
 }
 .login-form .group .check:checked + label .icon:before{
 	transform:scale(1) rotate(45deg);
@@ -177,3 +174,7 @@ a{color:inherit;text-decoration:none}
     height: 100%;
 	margin: 0 0 0 14px;
 }
+
+input::placeholder {
+	color: rgba(250, 243, 243, 0.5);
+  }
