--- a/src/component/forms/signform.scss
+++ b/src/component/forms/signform.scss
@@ -5,7 +5,10 @@
 body{
 	margin:0;
 	color: #18181ba3;
-	background-color:rgba(0, 0, 0, 0.596);
+	// background-color:rgba(0, 0, 0, 0.596);
+	background: rgba(0, 0, 0, 0.692);
+	// opacity: 50%;
+	// background-size: cover;
 	font:600 16px/18px 'Open Sans',sans-serif;
 }
 *,:after,:before{box-sizing:border-box}
