--- a/src/component/donor/donor.scss
+++ b/src/component/donor/donor.scss
@@ -1,11 +1,25 @@
 // #root{
 //     background: rgba(0, 0, 0, 0.842);
 // }
+@media (min-width: 768px){
 .donors-list{
-    width: 90%;
-    margin: auto;
+    // width: 90%;
+    margin: auto 0 0 10%;
     display: grid;
     grid-template-columns: 32% 32% 32%;
+}
+}
+@media (max-width: 768px){
+    .donors-list{
+        // width: 90%;
+        margin: auto;
+        margin-left: 17%;
+        display: grid;
+        grid-template-columns: auto;
+    }   
+}
+.fixx{
+    margin-top: 100px;
 }
 .donor-line{
     position: relative;
@@ -25,55 +39,59 @@
     }
     .div-buttons{
         opacity: 0;
-        margin-left: 5%;
+        // margin-left: 3%;
         .donor-item-button{
             padding: 2%;
-            margin: 10%;
+            margin: 10% 10% 10% 14%;
             width: 230px;
             height: 50px;
             display: block;
             font-size: 20px;
             color: white;
+            // margin-left: 10%;
             border-radius: 5%;
             background: rgba(0, 0, 0, 0.438);
             border: rgba(255, 255, 255, 0.623) solid 1px;
             box-shadow:3px 3px 3px rgba(45, 148, 105, 0.308) ;
         }
         .more{
-            margin-top: 18%;
+            margin-top: 16%;
 
         }
     }
     .donor-item-button:hover{
         // transform: scale(1.00);
-       color: rgba(68, 197, 143, 0.623);
-        border:rgba(68, 197, 143, 0.623) solid 2px ;
+       color: rgba(0, 150, 136, 0.57);
+        border:rgba(0, 150, 136, 0.57) solid 2px ;
         transition: 750ms;
         cursor: pointer;
     }
-    .donor-item-div1{
-        position: absolute;
-        top: 1.9%;
-        width: 48.1%;
-        left: 2%;
-        height: 86.8%;
-        opacity: 1;
-        border-radius: 4%;
-        transform: rotate(30beg);
-        background: rgba(0, 0, 0, 0.582);
-        // background-color: rgba(112, 33, 33, 0.658);
-    }
-    .donor-item-div2{
-        background: rgba(0, 0, 0, 0.582);
-        opacity: 1;
-        position: absolute;
-        width: 48.1%;
-        top: 1.9%;
-        right: 2%;
-        height: 86.8%;
-        border-radius: 4%;
-        // transform: rotate(0);
-    }
+    // .donor-item-div1{
+    //     position: absolute;
+    //     top: 1.9%;
+    //     width: 48.1%;
+    //     left: 2%;
+    //     height: 86.8%;
+    //     transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    //     opacity: 1;
+    //     border-radius: 4%;
+    //     transform: rotate(30beg);
+    //     // transform: rotate(-45deg) translateY(-10px) translateX(10px);
+    //     background: rgba(0, 0, 0, 0.582);
+    //     // background-color: rgba(112, 33, 33, 0.658);
+    // }
+    
+    // .donor-item-div2{
+    //     background: rgba(0, 0, 0, 0.582);
+    //     opacity: 1;
+    //     position: absolute;
+    //     width: 48.1%;
+    //     top: 1.9%;
+    //     right: 2%;
+    //     height: 86.8%;
+    //     border-radius: 4%;
+    //     // transform: rotate(0);
+    // }
    
     // .donor-item-div{
     // }
@@ -85,10 +103,11 @@
 .donor-line .div-buttons {
     position: absolute; 
     top: 2%;
-    left: 1%;
-    width: 97%;
+    left: 2%;
+    width: 96.5%;
     box-sizing: border-box;
-    height: 91%;
+    box-sizing: content-box;
+    height: 86.5%;
     border-radius: 3%;
     // position: relative;
 }
@@ -99,21 +118,22 @@
 // }
 .donor-line .div-buttons:hover{
     opacity: 1;
-    // background: rgba(0, 0, 0, 0.582);
+    background: rgba(0, 0, 0, 0.582);
 }
 .donor-item-name{
     text-align: center;
     margin: 2%;
     border-top: groove;
+    color: rgba(0, 0, 0, 0.781);
 }
 .donor-item-name:hover{
-    color: rgba(68, 197, 143, 0.623);
+    color: rgba(0, 150, 136, 0.57);
     cursor: pointer;
 }
-.donor-line:hover{
-    transform: scale(1.002);
-    transition: 870;
-}
+// .donor-line:hover{
+//     transform: scale(1.002);
+//     transition: 870;
+// }
 // .styles-div{
 //     opacity: 0;
 // }
