--- a/src/component/header/header.scss
+++ b/src/component/header/header.scss
@@ -1,27 +1,30 @@
 @import url('https://fonts.googleapis.com/css?family=Bellota+Text|Righteous|Trade+Winds&display=swap');
 html{
+    background: #0c0c0c;
     box-sizing: border-box;
+    width: 100%;
 }
 *, *:after,*:before{
     box-sizing: inherit;
 }
 
 body{
-    background: rgba(19, 18, 18, 0.945);
-  width: 100%;
-  height: 100%;
+    // background: rgba(19, 18, 18, 0.945);
+//   width: 100%;
+//   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
-  color: white;
+//   color: rgba(255, 255, 255, 0.87);
 //   padding: 60px;
 // margin: 1%;
 }
 header{
+    width: 100%;
     background: rgba(19, 18, 18, 0.945);
-    position: fixed;
+    position: absolute;
     // padding-bottom: 4.5%;
-    width: 99%;
+    // width: 99%;
     margin: auto;
-    margin: 2%;
+    // margin: 2%;
     position: relative;
 }
 h1{
@@ -96,7 +99,7 @@ h1{
                 display: block;
                 float: left;
                 line-height: 50px;
-                padding: 4.5%;
+                padding: 6.5%;
                 border-bottom: groove;
             }
         }
@@ -140,8 +143,10 @@ h1{
     }
 
 .oppenned span:nth-child(2) {
-    height: 1048%;
-    width: 681%;
+    height: 1164%;
+    z-index: 18;
+    position: absolute;
+    width: 774%;
     top: -38px;
     border-radius: 13%;
     background-color: #009688;
@@ -164,7 +169,7 @@ h1{
 }
 
 .header-containar{
-    position: fixed;
+    position: absolute;
     margin-bottom: 20%;
     // position: absolute;
     clear: both;
