--- a/src/component/sign-forms/signForm.scss
+++ b/src/component/sign-forms/signForm.scss
@@ -27,7 +27,7 @@ a{color:rgba(0, 0, 0, 0.623);text-decoration:none}
 	height:100%;
 	position:absolute;
 	padding:90px 70px 50px 70px;
-	background: #0f545dd1;
+	background: #009487ab;
 }
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
@@ -61,7 +61,7 @@ a{color:rgba(0, 0, 0, 0.623);text-decoration:none}
 .login-html .sign-in:checked + .tab,
 .login-html .sign-up:checked + .tab{
 	color:#fff;
-	border-color:#1161ee;
+	border-color:#18696e;
 }
 .login-form{
 	min-height:345px;
@@ -154,7 +154,7 @@ a{color:rgba(0, 0, 0, 0.623);text-decoration:none}
     height: 100%;
     position: absolute;
     padding: 90px 70px 50px 70px;
-	background: #0f545dbd;
+	background: #00756bbf;
 }
 .group-google {
 	width: 392px;
