--- a/src/component/header/header.scss
+++ b/src/component/header/header.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Bellota+Text|Righteous|Trade+Winds&display=swap');
 html{
-    background: #000000;
+    // background: #000000;
     box-sizing: border-box;
     width: 100%;
 }
