--- a/src/component/aboutus/about.scss
+++ b/src/component/aboutus/about.scss
@@ -137,7 +137,7 @@
 }
 .btn{
     width: 66%;
-    height: 80%;
+    height: 90%;
 }
 
 .button_container{
@@ -157,6 +157,21 @@ text-decoration: none;
 
 }
 
+@media(max-width: 768px) {
+
+   
+    .btn{
+        font-size: 60%;
+    }
+    
+.team-section{
+  
+    padding: 45px;
+
+}
+  
+   
+}
 
 
 
