--- a/src/component/modal/modal.module.scss
+++ b/src/component/modal/modal.module.scss
@@ -1,17 +1,15 @@
 .modal {
-
     bottom:0;
     left:0;
-    position:absolute;
+    position:fixed;
     right:0;
     top:0;
     z-index:100;
 
     &:after {
-
         background:#000;
         bottom:0;
-        content:' ';
+        content:'';
         left:0;
         opacity:.5;
         position:absolute;
