--- a/src/component/sign-forms/signForm.scss
+++ b/src/component/sign-forms/signForm.scss
@@ -47,6 +47,7 @@ a{color:rgba(0, 0, 0, 0.623);text-decoration:none}
 .login-form .group .label,
 .login-form .group .button{
 	text-transform:uppercase;
+	cursor: pointer;
 }
 .login-html .tab{
 	font-size:22px;
