do the popup for details

--- a/src/component/footer/footer.scss
+++ b/src/component/footer/footer.scss
@@ -153,9 +153,13 @@
         padding: 0;
     }
     p , i {
+        
         cursor: pointer;
        font-size: 13px; 
        text-align: left;
+    }
+    i{
+        display: initial;
     }
 }
 .social-icon{
