--- a/src/component/donor/donor.scss
+++ b/src/component/donor/donor.scss
@@ -18,7 +18,6 @@
 }
 .donor-line{
     position: relative;
-    z-index: 20;
     border-radius: 3%;
     width: 80%;
     margin: 3%;
@@ -59,13 +58,13 @@
     }
     .donor-item-div1{
         position: absolute;
-        top: 1.9%;
+        top: 1.7%;
         width: 48.1%;
         left: 2%;
-        height: 86.8%;
+        height: 86.9%;
         transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
         opacity: 1;
-        border-radius: 4%;
+        border-radius: 2%;
         transform: rotate(30beg);
         // transform: rotate(-45deg) translateY(-10px) translateX(10px);
         background: rgba(0, 0, 0, 0.472);
@@ -76,10 +75,10 @@
         opacity: 1;
         position: absolute;
         width: 48.1%;
-        top: 1.9%;
+        top: 1.7%;
         right: 2%;
-        height: 86.8%;
-        border-radius: 4%;
+        height: 86.97%;
+        border-radius: 2%;
     }
     // .donor-item-div2:hover{
     //     opacity: 0;
@@ -96,11 +95,11 @@
 }
 .donor-line .div-buttons {
     position: absolute; 
-    top: 2%;
+    top: 22%;
     left: 2%;
     width: 96.5%;
     // box-sizing: content-box;
-    height: 86.5%;
+    height: 57.5%;
     border-radius: 3%;
 }
 .donor-line .div-buttons:hover{
@@ -108,7 +107,9 @@
     // background: rgba(0, 0, 0, 0.582);
 }
 .donor-item-name{
+    display: block;
     text-align: center;
+    z-index: 100;
     margin: 2%;
     border-top: groove;
     color: rgba(0, 0, 0, 0.781);
@@ -120,4 +121,22 @@
 .clear-div:after{
    margin: 0;
 }
+.fa{
+    border: none;
+}
+
+i {
+    cursor: pointer;
+   font-size: 130px; 
+   opacity: 1;
+   text-align: center;
+   border-top-style: inset;
+padding: 1%;
+width: 100%;
+margin: auto;
+text-align: center;
+}
+// .social-icon{
+
+// }
 
