--- a/src/component/modal/modal.module.scss
+++ b/src/component/modal/modal.module.scss
@@ -43,7 +43,7 @@
             display: flex;
             margin-top: 2%;
             color: rgba(255, 255, 255, 0.966);
-            font-size: 23px;
+            font-size: 19px;
             font-weight: bold;
             height: 1.5em;
             line-height: 1.5em;
@@ -56,15 +56,27 @@
                 text-align: center;
             }
             > img{
+                // position: absolute;
+                // z-index: 1002;
+                // top: 144px;
+                // left: 40px;
+                // box-shadow: 2px 2px 3px 1px #021413d8;
+                // border-radius: 42px;
+                // min-height: 148px;
+                // min-width: 30%;
+                // opacity: 90%;
+                // transform: skewX(0deg);
                 position: absolute;
                 z-index: 1002;
-                top: 144px;
-                left: 40px;
-                box-shadow: 2px 2px 3px 1px #021413d8;
-                border-radius: 42px;
-                min-height: 148px;
-                min-width: 30%;
-                opacity: 90%;
+                top: -3%;
+                left: 39%;
+                // padding: 1%;
+                box-shadow: 2px 2px 5px 1px #02141383;
+                border-radius: 30px;
+                // min-height: 148px;
+                min-width: 22%;
+                opacity: 86%;
+                overflow: hidden;
                 transform: skewX(0deg);
             }
             > img:hover{
@@ -94,18 +106,32 @@
         }
 
         > div {
-            font-family: 'ABeeZee', sans-serif;
-    width: 57%;
-    height: 86%;
-    top: 47px;
+    //         font-family: 'ABeeZee', sans-serif;
+    // width: 57%;
+    // height: 86%;
+    // top: 47px;
+    // position: absolute;
+    // right: 19px;
+    // color: black;
+    // background: #9e9e9e4f;
+    // font-size: 23px;
+    // box-shadow: 2p 2px 3px 5px brown;
+    // /* border: cornsilk; */
+    // padding: 1%;
+    // border: solid .5px #086f65;
+    // border-radius: 20px;
+    font-family: 'ABeeZee', sans-serif;
+    width: 94%;
+    height: 79%;
+    top: 90px;
     position: absolute;
     right: 19px;
     color: black;
-    background: #9e9e9e4f;
-    font-size: 23px;
+    background: #9e9e9e3d;
+    font-size: 20px;
     box-shadow: 2p 2px 3px 5px brown;
     /* border: cornsilk; */
-    padding: 1%;
+    padding: 2.5%;
     border: solid .5px #086f65;
     border-radius: 20px;
             > div {
@@ -113,22 +139,55 @@
                 // background-color: white;
                 color: rgba(255, 255, 255, 0.938);
                 line-height: 40px;
+                
                 > div {
                     letter-spacing: 1.5px;
-                    font-size: 20px;
+                    font-size: 17px;
                     text-align: center;
                     > div {  
-                          
+                        // display: inline;
+                        //   padding: -10%;
+                        width: 100%;
+                        // float: left;
+                        border-top: groove white;
+                        padding: 1%;
+                        // margin: -2px;
                          > span {
-                            display: block;
-                            text-align: left;
-                            margin-left: 6%;
-                            font-size: 20px;
-                            border-top: groove white;
-                            > i {
-                                display: inline;
-                            }
+                            // display: block;
+                            // text-align: left;
+                            float: left;
+                            // margin-left: -16%;
+                            // line-height: 146%;
+                            font-size: 17px;
+                            // display: contents;
+                        
+                        }
+                                > i {    
+                                    // display: inline;
+                                    // margin-top: 5%;
+                                    width: 10%;
+                                    font-size: 28px;
+                                    background: rgba(255, 255, 255, 0.185);
+                                    cursor: pointer;
+                                    // display: contents;
+                                    float: left;
+                                }
+                    > p {
+                        padding: 5px;
+                        margin: 0 0 0 0px;
+                        background: #b5aaaa24;
+                        display: inline-block;
+                        width: 70%;
+                        // float: right;
+                        border-radius: 15px;
+                        text-align: center;
                     }
+                    > p:hover{
+                        transform: scale(1.005);
+                        background: #b5aaaa4d;
+                        cursor: pointer;
+                    }
+                    
                 }
                 }
             }
@@ -137,3 +196,13 @@
 
 }
 
+// position: absolute;
+// z-index: 1002;
+// top: 1px;
+// left: 35%;
+// box-shadow: 2px 2px 3px 1px #021413d8;
+// border-radius: 83px;
+// min-height: 148px;
+// min-width: 30%;
+// opacity: 90%;
+// transform: skewX(0deg);
