--- a/src/component/donor/donor.scss
+++ b/src/component/donor/donor.scss
@@ -41,7 +41,7 @@
             display: block;
             font-size: 112%;
             color: white;
-            border-radius: 5%;
+            border-radius: 20px;
             background: rgba(0, 0, 0, 0.438);
             border: rgba(255, 255, 255, 0.623) solid 1px;
             box-shadow:3px 3px 3px rgba(45, 148, 105, 0.308) ;
