--- a/src/component/sign-forms/signForm.scss
+++ b/src/component/sign-forms/signForm.scss
@@ -82,7 +82,7 @@ a{color:rgba(0, 0, 0, 0.623);text-decoration:none}
 .login-form .group .button{
 	border:none;
 	padding:15px 20px;
-	border-radius:2px;
+	border-radius: 20px;
 	background:rgba(255,255,255,.1);
 }
 .login-form .group .label{
@@ -162,8 +162,20 @@ a{color:rgba(0, 0, 0, 0.623);text-decoration:none}
 }
 
 .button-google{
-	border-radius: 25px;
-	background: rgb(203, 63, 34);
+	display: block;
+    border: 0px;
+    border-radius: 31px;
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 1px 2px;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+    font-size: 19px;
+    margin: 5px;
+    width: calc(100% - 10px);
+    overflow: hidden;
+    padding: 0px 10px;
+    user-select: none;
+    height: 50px;
+    background: rgb(203, 63, 34);
 }
 .button-google div{
 
@@ -205,7 +217,7 @@ input::placeholder {
 		z-index: 93;
 		background: rgba(116, 111, 111, 0.644);
 		width: 100%;
-		height: 319%;
+		height: 352.5%;
 		opacity: .5;
 	}
 }
