fixed the backgroun color

--- a/src/component/spinner/loading.scss
+++ b/src/component/spinner/loading.scss
@@ -85,7 +85,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    background:black;
+    background:white;
     transition: background 1s 2s;
     pointer-events:none;
   }
