--- a/src/component/aboutus/about.scss
+++ b/src/component/aboutus/about.scss
@@ -23,8 +23,8 @@
     margin: auto;
     width: 160px;
     height: 3px;
-    background:  #0f545dd1;
-    margin-bottom: 40px;
+    background: #0f545dd1;
+    margin-bottom: 15px;
 
 }
 
@@ -47,6 +47,13 @@
     transition: 0.4s all;
     filter: grayscale(100%);
    
+}
+.pa a img::after{
+    .par{
+        // padding: 8%;
+        visibility: visible;
+    }
+      
 }
 .ps a:hover > img{
     filter: none;
@@ -72,7 +79,7 @@
 }
 .name{
     display: block;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     text-align: center;
     text-transform: uppercase;
     font-size: 22px;
@@ -86,7 +93,7 @@
     margin: auto;
     box-shadow: 1px 2px 10px 0px #0f545dd1;
     width: 60%;
-    margin-bottom: 9%;
+    margin-bottom: 2%;
 
 }
 
@@ -94,21 +101,22 @@
 
 
 .btn {
-  border: none;
-  display: block;
-  text-align: center;
-  cursor: pointer;
-  text-transform: uppercase;
-  outline: none;
-  overflow: hidden;
-  position: relative;
-  color: #fff;
-  font-weight: 700;
-  font-size: 15px;
-  background-color: #222;
-  padding: 17px 60px;
-  margin: 0 auto;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.20);
+    border: none;
+    display: block;
+    text-align: center;
+    cursor: pointer;
+    text-transform: uppercase;
+    outline: none;
+    overflow: hidden;
+    position: relative;
+    color: #fff;
+    font-weight: 700;
+    border-radius: 30px;
+    font-size: 15px;
+    background-color: #222;
+    padding: 17px 60px;
+    margin: 0 auto;
+    box-shadow: 0 5px 15px rgba(191, 183, 183, 0.2);
 }
 
 .btn span {
@@ -117,14 +125,13 @@
 }
 
 .btn:after {
-
   content: "";
   position: absolute;
   left: 0;
   top: 0;
   height: 490%;
   width: 90%;
-  background: #0f545dd1;
+  background: #0f545db7;
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
   -webkit-transform: translateX(-98%) translateY(-25%) rotate(45deg);
@@ -192,11 +199,16 @@ text-decoration: none;
 }
 .par{
     padding: 8%;
+    // visibility: hidden;
 }
   
    
 }
-
+// .par{
+//     padding: 8%;
+//     // visibility: hidden;
+// }
+  
 
 
 
