--- a/src/component/chat/chat.scss
+++ b/src/component/chat/chat.scss
@@ -1,47 +1,82 @@
+html,
 body {
-    background-color: black;
-    color: white;
+  font-family: "Roboto", sans-serif;
+  padding: 0;
+  margin: 0;
 }
 
-.outerForm { 
-    text-align: center;
-    margin: 225px auto;
-    width: 50%;
-    background-color: rgb(11, 70, 235);
+* {
+  box-sizing: border-box;
 }
 
-.sendMsg {
-    float : left;
-    clear: both;
+.outerForm {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  height: 100vh;
+  align-items: center;
+  background-color: #00928596;
+  color: black;
 }
 
-.name , .room{
-    text-align: center;
-    padding: 5px;
-    color: navy;
-    margin: 10px;
-    font-weight: bolder;
-    width: 25%;
+.foodName {
+  color: black;
+  font-size: 2.5em;
+  padding-bottom: 15px;
+  border-bottom: 5px solid white;
+  margin-bottom: 20px;
 }
 
-.msgInput { 
-    color: rgb(46, 1, 1);
-    width: 75%;
-    padding: 15px;
+.submitB {
+  color: black;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: #00928596;
+  padding: 20px;
+  border-radius: 5px;
+  border: none;
+  width: 100%;
+  margin-top: 10px;
+  font-size: 19px;
+  cursor: pointer;
+  border: solid 2px #ffffff8c;
+  box-shadow: 1px 2px 5px 1px #00928596;
 }
 
-.msgSend {
-    width: 100px;
-    margin-top: 250px;
-    padding: 15px;
+.submitB:hover {
+    background-color: #00928596;
+}
+.name,
+.room {
+  border-radius: 0;
+  padding: 10px 20px;
+  width: 100%;
 }
 
-.online {
-    margin-left: 500px;
-    color: green;
-}
 
-.userName {
-    font-weight: bolder;
-    color: rgb(5, 160, 160);
-}
+// .sendMsg {
+//   float: left;
+//   clear: both;
+// }
+
+// .msgInput {
+//   color: rgb(46, 1, 1);
+//   width: 75%;
+//   padding: 15px;
+// }
+
+// .msgSend {
+//   width: 100px;
+//   margin-top: 250px;
+//   padding: 15px;
+// }
+
+// .online {
+//   margin-left: 500px;
+//   color: green;
+// }
+
+// .userName {
+//   font-weight: bolder;
+//   color: rgb(5, 160, 160);
+// }
