--- a/src/component/chat/chat.scss
+++ b/src/component/chat/chat.scss
@@ -15,12 +15,11 @@ body {
   text-align: center;
   height: 100vh;
   align-items: center;
-  background-color: #00928596;
-  color: black;
+  background-color: #1a1a1d;
 }
 
 .foodName {
-  color: black;
+  color: white;
   font-size: 2.5em;
   padding-bottom: 15px;
   border-bottom: 5px solid white;
@@ -28,10 +27,10 @@ body {
 }
 
 .submitB {
-  color: black;
+  color: #fff !important;
   text-transform: uppercase;
   text-decoration: none;
-  background: #00928596;
+  background: black;
   padding: 20px;
   border-radius: 5px;
   border: none;
