--- a/src/component/chat/chat.scss
+++ b/src/component/chat/chat.scss
@@ -3,34 +3,39 @@ body {
   font-family: "Roboto", sans-serif;
   padding: 0;
   margin: 0;
+  color: black;
+  font-weight: bolder;
 }
 
 * {
   box-sizing: border-box;
 }
 
+// submit page 
 .outerForm {
   display: flex;
   justify-content: center;
   text-align: center;
   height: 100vh;
   align-items: center;
-  background-color: #1a1a1d;
+  background-color: #00928596;
 }
 
+// our project name 
 .foodName {
-  color: white;
+  color: black;
   font-size: 2.5em;
   padding-bottom: 15px;
   border-bottom: 5px solid white;
   margin-bottom: 20px;
 }
 
+// submit button 
 .submitB {
   color: #fff !important;
   text-transform: uppercase;
   text-decoration: none;
-  background: black;
+  background: #00928596;
   padding: 20px;
   border-radius: 5px;
   border: none;
@@ -39,17 +44,24 @@ body {
   font-size: 19px;
   cursor: pointer;
   border: solid 2px #ffffff8c;
-  box-shadow: 1px 2px 5px 1px #00928596;
+  box-shadow: 1px 2px 5px 1px black;
 }
 
 .submitB:hover {
-    background-color: #00928596;
+    background-color: black;
 }
+
+.submitB:focus {
+  outline: 0;
+}
+
+// name and room inputs 
 .name,
 .room {
   border-radius: 0;
   padding: 10px 20px;
   width: 100%;
+  font-weight: bold;
 }
 
 
