--- a/src/component/chat/chat.scss
+++ b/src/component/chat/chat.scss
@@ -3,39 +3,46 @@ body {
   font-family: "Roboto", sans-serif;
   padding: 0;
   margin: 0;
-  color: black;
-  font-weight: bolder;
+  // background-image: url("../../logo.png");
+  // background-repeat: no-repeat;
 }
 
 * {
   box-sizing: border-box;
 }
 
-// submit page 
+// submit page
 .outerForm {
   display: flex;
   justify-content: center;
   text-align: center;
   height: 100vh;
   align-items: center;
-  background-color: #00928596;
+  background-color: black;
+  border: 5px solid #00928596;
 }
 
-// our project name 
+.logoImg {
+  margin: 1px auto;
+}
+
+// our project name
 .foodName {
-  color: black;
+  color: white;
   font-size: 2.5em;
   padding-bottom: 15px;
   border-bottom: 5px solid white;
   margin-bottom: 20px;
+  font-weight: bolder;
 }
 
-// submit button 
+// submit button
 .submitB {
   color: #fff !important;
   text-transform: uppercase;
   text-decoration: none;
-  background: #00928596;
+  // background: #00928596;
+  background: black;
   padding: 20px;
   border-radius: 5px;
   border: none;
@@ -44,44 +51,86 @@ body {
   font-size: 19px;
   cursor: pointer;
   border: solid 2px #ffffff8c;
-  box-shadow: 1px 2px 5px 1px black;
+  box-shadow: 1px 2px 5px 1px #00928596;
 }
 
 .submitB:hover {
-    background-color: black;
+  background-color: #00928596;
 }
 
 .submitB:focus {
   outline: 0;
 }
 
-// name and room inputs 
+// name and room inputs
 .name,
 .room {
   border-radius: 0;
   padding: 10px 20px;
   width: 100%;
   font-weight: bold;
+  color: black;
+  font-weight: bold;
 }
 
+.name:hover {
+  background-color: #9af1ea96;
+}
 
-// .sendMsg {
-//   float: left;
-//   clear: both;
-// }
+.room:hover {
+  background-color: #9af1ea96;
+}
 
-// .msgInput {
-//   color: rgb(46, 1, 1);
-//   width: 75%;
-//   padding: 15px;
-// }
+// innerForm
+.innerForm {
+  text-align: left;
+  height: 100vh;
+  align-items: center;
+  background-color: #00928596;
+  border: 5px solid black;
+}
 
-// .msgSend {
-//   width: 100px;
-//   margin-top: 250px;
-//   padding: 15px;
-// }
+.msgOn {
+  display: flex;
+  justify-content: stretch;
+}
 
+// message input and message button  
+.msgSub {
+  float: left;
+  clear: both;
+  width: 100%;
+  margin-top: 435px;
+  margin-left: 5px;
+}
+
+.msgInput {
+  color: black;
+  width: 90%;
+  padding: 15px;
+  font-family: cursive;
+  border: solid 2px black;
+  font-family: sans-serif;
+}
+
+.msgSend {
+  color: #fff;
+  text-decoration: none;
+  background: black;
+  padding: 15px;
+  border-radius: 5px;
+  border: none;
+  width: 128px;
+  font-size: 14px;
+  cursor: pointer;
+  border: solid 2px #ffffff8c;
+  box-shadow: 1px 2px 5px 1px #00928596;
+  font-family: cursive;
+}
+
+.msgSend:hover {
+  background: #00928596;
+}
 // .online {
 //   margin-left: 500px;
 //   color: green;
