--- a/src/component/donor/donor.scss
+++ b/src/component/donor/donor.scss
@@ -156,3 +156,138 @@ text-align: center;
     padding: 2%;
 }
 
+.update-input , .redio-div{
+    color: rgb(219, 218, 218);
+    display: block;
+    font-size: 14px;
+    border: none;
+    padding: 10px 10px;
+    margin: -1% auto 1%;
+    border-radius: 20px;
+    background: rgba(255, 255, 255, 0.1);
+    width: 100%;
+}
+.update-label{
+    color:rgb(219, 218, 218);
+	font-size:13px;
+}
+.redio-div{
+    margin: 0% 0% 0% 0%;
+}
+.update-label-r span {
+    width:100%;
+	color:#fff;
+	display:block;
+    color:rgb(219, 218, 218);
+	font-size:15px;
+}
+.update-button{
+    padding: 2%;
+    /* margin: 10% 10% 10% 11.5%; */
+    width: 24%;
+    height: 50px;
+    display: block;
+    line-height: 20%;
+    font-size: 79%;
+    margin: auto;
+    color: white;
+    border-radius: 20px;
+    background: rgba(0, 0, 0, 0.35);
+    border: rgba(255, 255, 255, 0.623) solid 1px;
+    box-shadow: 3px 3px 3px rgba(45, 148, 105, 0.308);
+}
+
+.update-button:hover{
+    color: rgba(0, 150, 136, 0.57);
+    border:rgba(0, 150, 136, 0.57) solid 2px ;
+    cursor: pointer;
+}
+
+// .fas{
+//     color: red;
+// }
+.curt-item:hover{
+    color: rgba(0, 150, 136, 0.57);
+    background: rgba(255, 255, 255, 0.712);
+}
+.donation-button{
+    padding: 2%;
+    /* margin: 10% 10% 10% 11.5%; */
+    width: 24%;
+    height: 50px;
+    display: block;
+    line-height: 20%;
+    font-size: 20px;
+    margin: auto;
+    color: white;
+    border-radius: 20px;
+    background: rgba(0, 0, 0, 0.35);
+    border: rgba(255, 255, 255, 0.623) solid 1px;
+    box-shadow: 3px 3px 3px rgba(45, 148, 105, 0.308);
+}
+.donation-button:hover{
+    color: rgba(0, 150, 136, 0.57);
+    border:rgba(0, 150, 136, 0.57) solid 2px ;
+    cursor: pointer;
+    
+}
+.donation-div{
+    position: relative;
+    width: 100%;
+    padding: 2%;
+    
+}
+.donor-header{
+    width: 90%;
+    margin: auto;
+    text-align: center;
+    font-size: 37px;
+    color: #ffffffe0;
+    padding: 1%;
+}
+.donation-href-div{
+    width: 90%;
+    height: 113px;
+    margin: auto;
+    display: grid;
+    padding: 1%;
+    grid-template-columns: 100%
+}
+
+.donation-p{
+    text-align: left;
+    font-size: 24px;
+    padding: 2%;
+    margin: 1%;
+    color: #ffffffcf;
+    text-shadow: 1px 2px 2px #1b5d57;
+}
+.donation-p::after{
+    border-bottom: groove;
+    
+}
+.cart-div{
+    width: 60%;
+    position: absolute;
+    top: 8%;
+    left: 35%;
+}
+
+.curt-item{
+    // margin: 3px 275px !important;
+    // padding: 2.2%;
+    right: 10px !important;
+    font-size: 28px !important;
+    // text-align: center;
+    height: 47px !important;
+    text-decoration: none;
+    width: 65px;
+    // margin: 5px 10px;
+    background-color: rgba(3, 100, 87, 0.459);
+    border-radius: 50%;
+
+}
+.space-span{
+    width: 100%;
+    
+}
