--- a/src/component/spinner/loading.scss
+++ b/src/component/spinner/loading.scss
@@ -1,11 +1,11 @@
 
   #loading {
     position: absolute;
-    top: 50%;
+    top: 32%;
     left: 50%;
     border: #cacdd386 1px solid;
     border-radius: 25px;
-    margin-top: -21px;
+    // margin-top: -26px;
     margin-left: -104px;
     width: 200px;
     overflow: hidden;
@@ -26,7 +26,7 @@
   }
   
   #loading li {
-    float: left;
+    // float: left;
     display: inline-block;
     width: 20px;
     height: 23px;
@@ -80,13 +80,13 @@
   
   #bigloading {
     width: 100%;
-    height: 100%;
+    height: 150%;
     overflow: hidden;
     position: absolute;
     left: 0;
     top: 0;
     bottom: 0;
-    background:rgba(9, 97, 93, 0.274);
+    // background:rgba(9, 97, 93, 0.274);
     transition: background 1s 2s;
     pointer-events:none;
   }
@@ -107,4 +107,16 @@
   
   #bigloading.ready {
     background: rgba(255, 255, 255, 0);
+  }
+  .img-spinner{
+    border-radius: 67px;
+    margin: auto;
+    margin-bottom: 0;
+    position: absolute;
+    overflow: hidden;
+    width: 90px;
+    height: 90px;
+    top: 19%;
+    left: 46%;
+    box-shadow: 0px 2px 2px 2px rgba(255, 255, 255, 0.336);
   }
