--- a/src/component/profile.scss
+++ b/src/component/profile.scss
@@ -84,7 +84,8 @@ body {
     position: relative;
     cursor:pointer;
     &.active {
-      border-bottom: 4px solid $color-primary;
+      border-bottom: 4px solid rgba(9, 92, 109, 0.925);
+
     }
   }
 }
@@ -368,5 +369,35 @@ z-index: 1;
 
 
     }
+    .avatar {
 
+     
+      max-width: 60%;
+      margin-left: 15%;
+
+    
+  }
+  .content-block{
+    margin-left: -15%;
+  }
+
+  .namm{
+font-size: 25px;
+}
+
+
+
+
+
+
+  
+
+
+  
+.courseStats {
+  margin: 60px 30px 0 0;
+  padding: 0;
+  list-style: none;
+
+}
   }
